<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.personModification.AddPersonFragment">

    <data>
        <variable name="personItem" type="com.example.birthdaywishes.pojo.Person"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">

        <NumberPicker
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/editPersonFragmentMonth_numberPicker" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.65"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                app:layout_constraintVertical_bias="0.65"
                android:value="@{personItem.birthday.month}"/>
        <NumberPicker
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/editPersonFragmentDay_numberPicker"
                app:layout_constraintBottom_toBottomOf="@+id/editPersonFragmentMonth_numberPicker"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.35"
                app:layout_constraintTop_toTopOf="@+id/editPersonFragmentMonth_numberPicker"
                android:value="@{personItem.birthday.day}"/>
        <TextView
                android:text="@string/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintBottom_toTopOf="@+id/editPersonFragmentDay_numberPicker"
                app:layout_constraintStart_toStartOf="@+id/editPersonFragmentDay_numberPicker"
                app:layout_constraintEnd_toEndOf="@+id/editPersonFragmentDay_numberPicker" android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/editPersonFragmentMonth_numberPicker"
                app:layout_constraintEnd_toEndOf="@+id/editPersonFragmentMonth_numberPicker"
                app:layout_constraintHorizontal_bias="0.52" app:layout_constraintBottom_toTopOf="@+id/editPersonFragmentMonth_numberPicker"
                android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textInputLayout"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2" android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@{personItem.name}"
                    android:ems="10" android:hint="@string/name" android:id="@+id/editPersonFragmentName_editText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/textInputLayout2"
                app:layout_constraintBottom_toTopOf="@+id/editPersonFragmentCancel_button"
                android:layout_marginBottom="64dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@{personItem.phoneNumber}"
                    android:ems="10" android:hint="@string/phone" android:id="@+id/editPersonFragmentPhone_editText"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:text="@string/submit"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editPersonFragmentSubmit_button" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <Button
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editPersonFragmentCancel_button"
                app:layout_constraintBottom_toBottomOf="@+id/editPersonFragmentSubmit_button" app:layout_constraintEnd_toStartOf="@+id/editPersonFragmentSubmit_button"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/editPersonFragmentSubmit_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>