<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="ui.WishesFragment">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/wishesFragment_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:src="@drawable/ic_wishes_add"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wishesFragment_recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/wishes_item"/>
    <androidx.cardview.widget.CardView
            android:id="@+id/wishesFragmentInputField_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/cardview_custom_radius"
            app:cardElevation="@dimen/cardview_custom_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">
            <EditText
                    android:id="@+id/wishesFragmentInput_editText"
                    android:layout_width="0dp" android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="start"
                    android:hint="@string/add_wishes_hint"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/fragmentWishesCancel_button"/>
            <Button
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/fragmentWishesCancel_button"
                    app:layout_constraintEnd_toStartOf="@+id/fragmentWishesSubmit_button"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="@+id/fragmentWishesSubmit_button"
                    app:layout_constraintBottom_toBottomOf="@+id/fragmentWishesSubmit_button"
                    android:text="@string/cancel"/>
            <Button
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/fragmentWishesSubmit_button" android:text="@string/submit"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>